# ruffbox-synth

./: .gitignore  Cargo.toml  LICENSE  README.md
binaural_filter/: default.raw  readme.txt
src/: building_blocks.rs  helpers.rs  lib.rs  ruffbox.rs  synths.rs
src/building_blocks/: ambisonics.rs  bitcrusher.rs  convolution_reverb.rs  delay.rs  envelopes.rs  filters.rs  freeverb.rs  interpolation.rs  mod_env.rs  modulator.rs  oscillators.rs  reverb.rs  routing.rs  sampler.rs  synths.rs  waveshaper.rs
src/building_blocks/ambisonics/: binauralizer_o1.rs  encoder_o1.rs
src/building_blocks/convolver/: block_convolver.rs  uniform_partitioned_convolution.rs
src/building_blocks/envelopes/: exp_perc_envelope.rs  linear_asr_envelope.rs  multi_point_envelope.rs  source_env.rs
src/building_blocks/filters/: biquad_hpf.rs  biquad_hpf_12db.rs  biquad_hpf_24db.rs  biquad_lpf.rs  biquad_lpf_12db.rs  biquad_lpf_24db.rs  butterworth4_hpf.rs  butterworth4_lpf.rs  butterworth_hpf.rs  butterworth_lpf.rs  dummy.rs  lpf18.rs  peak_eq.rs  sos.rs
src/building_blocks/oscillators/: brown_noise.rs  fm_saw.rs  fm_square.rs  fm_tri.rs  lf_cub.rs  lf_rsaw.rs  lf_saw.rs  lf_square.rs  lf_tri.rs  naive_blit.rs  sine_osc.rs  wavematrix.rs  wavetable.rs  white_noise.rs  wt_saw.rs
src/building_blocks/reverb/: convolution.rs  freeverb.rs
src/building_blocks/routing/: bal_chan.rs  pan_chan.rs
src/building_blocks/sampler/: mono.rs  stereo.rs
src/helpers/: misc.rs  wavetableize.rs
src/ruffbox/: ruffbox_controls.rs  ruffbox_playhead.rs  synth.rs
src/ruffbox/synth/: ambisonics.rs  convolution_reverb.rs  convolver.rs  delay.rs  envelopes.rs  filters.rs  freeverb.rs  oscillators.rs  routing.rs  sampler.rs  synths.rs
src/synths/: ambisonic.rs  n_channel.rs
src/synths/ambisonic/: ambisonic_sampler_o1.rs  lf_saw_synth.rs  lf_square_synth.rs  lf_tri_synth.rs  sine_synth.rs  single_oscillator_synth_o1.rs
src/synths/n_channel/: fm_saw_synth.rs  fm_square_synth.rs  fm_tri_synth.rs  karplusplus.rs  lf_cub_synth.rs  lf_saw_synth.rs  (+11 more)
(+31 files in other folders)
