[package]
name = "ruffbox_synth"
version = "0.1.0"
authors = ["nik <nik@parkellipsen.de>"]
edition = "2021"
license = "MIT"
description = "A beatbox-oriented synthesizer library."
readme = "README.md"
repository = "https://github.com/the-drunk-coder/ruffbox-synth/"
categories = ["multimedia::audio"]
keywords = ["audio", "synthesizer", "beatbox", "sampler"]

#[lib]
#crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.4.0"
wee_alloc = { version = "0.4.5", optional = true }
crossbeam = "0.8"
parking_lot = "0.11"
num-complex = "0.4"
chfft = "0.3.4"
rubato = "0.10.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
