[package]
name = "ruffbox_synth"
version = "0.13.0"
authors = ["nik <nik@parkellipsen.de>"]
edition = "2021"
license = "MIT"
description = "A beatbox-oriented synthesizer library."
readme = "README.md"
repository = "https://github.com/the-drunk-coder/ruffbox-synth/"
categories = ["multimedia::audio"]
keywords = ["audio", "synthesizer", "beatbox", "sampler"]

[dependencies]
crossbeam = "0.8"
parking_lot = "0.11"
num-complex = "0.4"
chfft = "0.3.4"
rubato = "0.10.0"
dashmap = "5.2"
fastrand = "1.8.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
#debug_plotter = { git = "https://github.com/fabianboesiger/debug-plotter", default-features=false }
assert_no_alloc = { git = "https://github.com/Windfisch/rust-assert-no-alloc" }

